# agent-deployment-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cookiecutter.json  pyproject.toml
.claude/: settings.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/: settings.json
{{cookiecutter.project_slug}}/.claude/commands/: deploy.md  eval.md  logs.md
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  deploy.yml  eval.yml  security.yml
{{cookiecutter.project_slug}}/agent/: __init__.py  agent.py
{{cookiecutter.project_slug}}/agent/tools/: __init__.py  example_tools.py
{{cookiecutter.project_slug}}/deployment/: config.py  deploy.py
{{cookiecutter.project_slug}}/deployment/scripts/: read_logs.sh  read_traces.sh  setup_gcp.sh
{{cookiecutter.project_slug}}/prompts/: prompts.yaml
{{cookiecutter.project_slug}}/prompts/system/: base.md  safety.md
{{cookiecutter.project_slug}}/prompts/tasks/: example_task.md
{{cookiecutter.project_slug}}/tests/evals/: promptfoo.yaml  provider.py  run_eval.py
{{cookiecutter.project_slug}}/tests/unit/: test_agent_init.py  test_agent_module.py  test_response_models.py  test_tools.py
(+6 files in other folders)
